k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: persons-finder
  namespace: default
  labels:
    app: persons-finder
    version: "0.0.1"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: persons-finder
